--- a/client/src/pages/Tags/Tags.css
+++ b/client/src/pages/Tags/Tags.css
@@ -17,7 +17,13 @@
   
   .tag {
     padding: 10px;
-    border: solid 1px #d2d2d2;
+    border:  1px solid #d2d2d2;
+    border-radius: 2px;
+  }
+
+  .tag-dark{
+    padding: 10px;
+    border:  0.5px solid #d2d2d2;
     border-radius: 2px;
   }
   
@@ -28,9 +34,24 @@
     background-color: #e1ecf4;
     color: #39739d;
   }
+
+  .tag-dark h5 {
+    display: inline-block;
+    margin: 10px 0px;
+    padding: 5px 5px;
+    background-color: #144466;
+    color: #edeff0e2;
+    border-radius: 4px;
+  }
   
   .tag p {
     font-size: 14px;
     color: #323232;
+    line-height: 17px;
+  }
+
+  .tag-dark p {
+    font-size: 14px;
+    color: white;
     line-height: 17px;
   }
