--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -3,7 +3,8 @@
 width: 100vw;
 margin: 0% auto;
 border-top: solid 3px #ef8236; 
-box-shadow: 0px 1px 5px #00800833; 
+
+box-shadow: 0px 1px 5px #18e02533; 
 position: fixed;
 z-index: 5;
 top: 0%;
@@ -14,6 +15,25 @@ justify-content: center;
 align-items: center;
 
 }
+
+.main-nav-dark {min-height: 50px;
+    width: 100vw;
+    margin: 0% auto;
+    border-top: solid 3px #ef8236; 
+    /* box-shadow: 0px 1px 5px #00800833;  */
+    border-bottom: solid 1.5px rgba(73, 69, 69, 0.34);
+    position: fixed;
+    z-index: 5;
+    top: 0%;
+    left: 84;
+    background-color: hsl(210,3%,15%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    }
+    
+
 
 
 
@@ -27,6 +47,10 @@ align-items: center;
 
 .nav-logo{
     padding:5px 25px;
+}
+.nav-logo-dark{
+    padding:5px 25px;
+fill:red;
 }
 
 .nav-items{
@@ -47,8 +71,24 @@ align-items: center;
     color:rgb(38, 31, 31)
 }
 
+.nav-btn-dark{
+    cursor:pointer;
+    border-radius: 20px;
+    padding:10px 20px;
+    text-decoration: none;
+    color:white;
+}
+
 .nav-item:hover{
     background-color: rgb(226,226,226);
+}
+
+.nav-item-dark img{
+filter:brightness(0) invert(1);
+}
+
+.nav-item-dark:hover{
+    background-color: rgb(91, 89, 89);
 }
 
 .navbar form{
@@ -57,14 +97,32 @@ align-items: center;
     position:relative;
 }
 
-.navbar form input{
+.search-input{
     min-width:90%;
     margin:0;
     padding:8px 10px 8px 32px;
     font-size:13px;
     border:solid 1px #0000003e;
     border-radius:3px;
+    
 }
+
+.search-input-dark{
+    min-width:90%;
+    margin:0;
+    padding:8px 10px 8px 32px;
+    font-size:13px;
+    border:solid 1px rgba(255, 255, 255, 0.672);  
+    border-radius:3px;
+    background-color: hsl(210,3%,15%);
+
+    
+}
+
+.invert_search_icon{
+filter: invert(100%);
+}
+
 
 .navbar form .search-icon{
     /* position:absolute;
@@ -88,9 +146,26 @@ align-items: center;
     
 }
 
+.nav-links-dark{
+    padding:7px 13px;
+    /* border:solid 1px blue; */
+    border-radius:3px;
+    background-color: hsl(210, 90%, 64%);
+    cursor:pointer;
+    text-decoration: none;
+    color:white;
+    
+}
+
 .nav-links:hover{
     background-color: #d3e4eb;
 }
+
+
+.nav-links-dark:hover{
+    background-color: #86d1ff;
+}
+
 
 .change{
     display: flex;
