--- a/client/src/pages/AskQuestions/AskQuestion.css
+++ b/client/src/pages/AskQuestions/AskQuestion.css
@@ -3,19 +3,44 @@
     background-color: #f1f2f3;
   }
   
+  .ask-question-dark {
+    min-height: 80vh;
+    background-color: hsla(204, 5%, 21%, 0.832);
+  }
+
   .ask-ques-container {
     margin: auto;
     padding: 0px 20px 20px 20px;
     max-width: 1200px;
   }
+
+  .ask-ques-container-dark {
+    margin: auto;
+    padding: 0px 20px 20px 20px;
+    max-width: 1200px;
+  }
+
+
   
   .ask-ques-container h1 {
+    padding: 80px 0px 20px 0px;
+  }
+
+  .ask-ques-container-dark h1 {
     padding: 80px 0px 20px 0px;
   }
   
   .ask-ques-container form .ask-form-container {
     padding: 20px;
     background-color: white;
+    border-radius: 3px;
+    box-shadow: 0 10px 25px rgb(0 0 0 / 5%), 0 20px 48px rgb(0 0 0 / 5%),
+      0 1px 4px rgb(0 0 0 / 10%);
+  }
+
+  .ask-ques-container-dark form .ask-form-container {
+    padding: 20px;
+    background-color: hsl(210,3%,15%);
     border-radius: 3px;
     box-shadow: 0 10px 25px rgb(0 0 0 / 5%), 0 20px 48px rgb(0 0 0 / 5%),
       0 1px 4px rgb(0 0 0 / 10%);
@@ -31,6 +56,8 @@
     padding: 3px 0px;
   }
   
+ 
+
   .ask-form-container label input,
   .ask-form-container label textarea {
     padding: 10px;
@@ -38,6 +65,15 @@
     font-family: "Roboto", sans-serif;
     width: calc(100% - 20px);
     resize: none;
+  }
+
+  .ask-question-dark label textarea {
+    padding: 10px;
+    border: solid 1px rgba(255, 255, 255, 0.672);
+    font-family: "Roboto", sans-serif;
+    width: calc(100% - 20px);
+    resize: none;
+    background-color:hsl(210,3%,15%)
   }
   
   .review-btn {
@@ -50,6 +86,17 @@
     cursor: pointer;
     transition: 0.3s;
   }
-  .review-btn:hover {
-    background-color: #0086d8;
+  .review-btn-dark {
+    margin: 50px 0px;
+    padding: 10px;
+    background-color: hsl(210, 90%, 64%);
+    border: solid 1px #009dff;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+
+  .review-btn-dark:hover {
+    background-color: #86d1ff;
   }
