--- a/client/src/pages/Questions/Questions.css
+++ b/client/src/pages/Questions/Questions.css
@@ -14,10 +14,16 @@
     display: flex;
 }
 
-.question-votes{
+.question-votes , .question-votes-dark{
     padding:5px 20px 5px 10px;
 }
-.question-votes p{
+
+.question-votes-dark img{
+filter: invert(100%);
+}
+
+
+.question-votes, .question-votes-dark  p{
 margin:0%;
 font-size:25px;
 text-align:center;
@@ -109,5 +115,15 @@ text-align:center;
     font-family:'Roboto', sans-serif;
     width:calc(100% - 20px);
     resize:vertical;
+
+}
+
+.post-ans-container-dark form textarea{
+    padding:10px;
+    border:solid 1px rgba(0, 0, 0, 0.3);
+    font-family:'Roboto', sans-serif;
+    width:calc(100% - 20px);
+    resize:vertical;
+
 }
 
