--- a/client/src/pages/UserProfile/UsersProfile.css
+++ b/client/src/pages/UserProfile/UsersProfile.css
@@ -4,6 +4,8 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+    /* background-color: aqua; */
+
   }
   
   .user-details {
@@ -79,3 +81,103 @@
     margin-left: 10px;
     cursor: pointer;
   }
+
+.profile{
+display: grid;
+grid-template-columns: 30% 1fr;
+grid-template-rows: 100%;
+}
+
+  .tags-watched{
+    /* background-color: yellow; */
+
+  }
+
+  .about-profile{
+    /* background-color: red; */
+
+  }
+
+
+.profile_bio{
+    /* background-color: rgb(14, 9, 1); */
+    height: 70vh;
+  }
+
+  .profile_bio_badges{
+    /* background-color: blue; */
+    display: grid;
+    grid-template-columns: 30% 1fr;
+    grid-template-rows: 100%;
+  }
+
+  /* .home-container-2{
+    background-color: pink;
+  } */
+
+  .badges-div{
+/* background-color: brown; */
+display: flex;
+justify-content: space-between;
+
+  }
+
+.badges-sub-div{
+  border: 1px solid black;
+  border-radius: 7px;
+  display: flex;
+width:30%;
+
+}  
+
+.badges-sub-div-2{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height:50%;
+}
+
+.badges-sub-div-2 h2{
+  margin-bottom: 0px;
+
+}
+
+.stats-div{
+
+}
+
+.stats-div-1{
+
+  display: flex;
+height: 50%;
+
+}
+
+.stats-div-1 div{
+ width:50%;
+
+}
+.stats-div-1 h3{
+  margin:10px 0px 0px 11px;
+}
+
+.stats-div-1 p{
+  margin-left:10px;
+}
+
+.stats-div-main{
+  /* background-color: #0a95ff; */
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+border:1px solid black;
+width: 80%;
+border-radius: 7px;
+}
+
+.stats-div h1{
+  margin-bottom: 19px;
+}
+.badges h1{
+  margin-bottom:19px;
+}
