--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,17 +8,94 @@
 
 }
 
+.home-container-1-dark{
+  min-height:100vh;
+  max-width:1143px;
+  width:100%;
+  display: flex;
+  justify-content: space-between;
+  margin:0% auto;
+color:white;
+}
+
+
 .home-container-2{
   max-width:1100px;
   width:calc(100% - 164px);
   border:1px solid #d6d9dc;
   padding:24px;
   box-sizing:border-box;
+  /* height: 100%; */
+}
+.home-container-2-dark{
+  max-width:1100px;
+  width:calc(100% - 164px);
+  border:1px solid #d6d9dc;
+  padding:24px;
+  box-sizing:border-box;
+  /* height: 100%; */
+  color:white;
 }
 
 @media screen and (max-width: 760px) {
   .home-container-2 {
     max-width: 100%;
     width: 100%;
+   
   }
+
+  .home-container-2-dark {
+    max-width: 100%;
+    width: 100%;
+    color:white;
+  }
+}
+
+
+
+@media (max-width: 980px) {
+  .home-container-2{
+    display: flex;
+    flex-direction: column;
+    /* height: 100%; */
+    /* color:white; */
+    border-bottom: none;
+  }
+
+  .home-container-2-dark{
+    display: flex;
+    flex-direction: column;
+    /* height: 100%; */
+    border-bottom: none;
+    color:white;
+  }
+}
+@media (max-width:640px){
+  .left-sidebar{
+      display: none;
+  }
+.left-bar1{
+  height: 181px;
+  background-color: white;
+}
+
+.left-sidebar-dark{
+  display: none;
+}
+.left-bar1-dark{
+height: 181px;
+background-color: white;
+}
+}
+
+.activeHamberclass{
+  display: block;
+  position: absolute;
+background-color: white;
+}
+
+.activeHamberclass-dark{
+  display: block;
+  position: absolute;
+background-color: hsla(180, 4%, 16%, 0.832);
 }
