--- a/client/src/pages/Questions/Questions.css
+++ b/client/src/pages/Questions/Questions.css
@@ -5,6 +5,24 @@
     padding:0px;
 }
 
+.question-details-page-dark{
+    width:calc(100% - 300px - 24px);
+    float:left;
+    margin:25px 0px;
+    padding:0px;
+    color:white;
+}
+
+@media (max-width:980px){
+    .question-details-page{
+        width:calc(100%);
+    }
+    .question-details-page-dark{
+        width:calc(100%);
+        color:white;
+    }
+}
+
 .question-details-container{
     margin-bottom: 20px;
     padding-bottom: 20px;
@@ -120,10 +138,30 @@ text-align:center;
 
 .post-ans-container-dark form textarea{
     padding:10px;
-    border:solid 1px rgba(0, 0, 0, 0.3);
+    border:solid 1px rgba(98, 91, 91, 0.3);
     font-family:'Roboto', sans-serif;
     width:calc(100% - 20px);
     resize:vertical;
+    color:white;
+    background-color: hsl(210,3%,15%);
 
 }
 
+
+
+@media (max-width:400px){
+    /* .imageelement1{
+      display: none;
+} */
+.question-votes, .question-votes-dark  p{
+    margin:0 -5% 0 -5%;
+    font-size:25px;
+    text-align:center;
+    }
+
+    .question-votes-dark  p{
+        margin:0 -5% 0 -5%;
+        font-size:25px;
+        text-align:center;
+        }    
+}
