--- a/client/src/pages/UserProfile/UsersProfile.css
+++ b/client/src/pages/UserProfile/UsersProfile.css
@@ -5,7 +5,7 @@
     align-items: flex-start;
     justify-content: space-between;
     /* background-color: aqua; */
-
+color:white;
   }
   
   .user-details {
@@ -107,7 +107,7 @@ grid-template-rows: 100%;
   .profile_bio_badges{
     /* background-color: blue; */
     display: grid;
-    grid-template-columns: 30% 1fr;
+    grid-template-columns: 95%;
     grid-template-rows: 100%;
   }
 
@@ -124,6 +124,13 @@ justify-content: space-between;
 
 .badges-sub-div{
   border: 1px solid black;
+  border-radius: 7px;
+  display: flex;
+width:30%;
+
+}  
+.badges-dark .badges-sub-div{
+  border: 1px solid white;
   border-radius: 7px;
   display: flex;
 width:30%;
@@ -151,10 +158,12 @@ width:30%;
   display: flex;
 height: 50%;
 
+
 }
 
 .stats-div-1 div{
  width:50%;
+
 
 }
 .stats-div-1 h3{
@@ -175,9 +184,164 @@ width: 80%;
 border-radius: 7px;
 }
 
+@media (max-width:950px){
+  .stats-div-main{
+    /* background-color: #0a95ff; */
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: center;
+    height: 50%;
+    width: 100%;
+  }
+
+  .profile_bio_badges{
+    /* background-color: blue; */
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 60%;
+  }
+  .stats-div-1{
+    width: 100%;
+   
+  }
+
+
+
+  .stats-div-main-dark{
+    /* background-color: #0a95ff; */
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: center;
+    height: 50%;
+    width: 100%;
+  }
+
+  .profile_bio_badges-dark{
+    /* background-color: blue; */
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 60%;
+  }
+  .stats-div-1-dark{
+    width: 100%;
+   
+  }
+}
+
+@media (max-width:550px){
+  .profile_bio_badges{
+    /* background-color: blue; */
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 17%;
+  }
+.stats-div{
+  height: 34%;
+}
+.badges-div{
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+}
+.badges-sub-div{
+width:100%;
+height:190px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+text-align: center;
+}
+
+.badges-dark .badges-sub-div{
+  width:100%;
+  height:190px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  }
+
+
+
+.badges-sub-div img{
+height: 100px;
+width:125px;
+}
+.badges-dark .badges-sub-div img{
+  height: 100px;
+  width:125px;
+  }
+
+.badges-sub-div-2{
+  justify-content: space-around;
+  margin-top:-22px;
+}
+
+.stats-div-main{
+  height: 150%;
+}
+
+
+
+
+.profile_bio_badges-dark{
+  /* background-color: blue; */
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 17%;
+}
+.stats-div-dark{
+height: 34%;
+}
+.badges-div-dark{
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+}
+.badges-sub-div-dark{
+width:100%;
+height:190px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+text-align: center;
+}
+
+.badges-sub-div-dark img{
+height: 100px;
+width:125px;
+}
+.badges-sub-div-2-dark{
+justify-content: space-around;
+margin-top:-22px;
+}
+
+.stats-div-main-dark{
+height: 150%;
+}
+
+}
+
+
 .stats-div h1{
   margin-bottom: 19px;
 }
 .badges h1{
   margin-bottom:19px;
+}
+
+.badges-dark{
+  color:white;
+  border-color: white;
+}
+
+.profile-dark{
+  color:white;
 }
