--- a/client/src/pages/AskQuestions/AskQuestion.css
+++ b/client/src/pages/AskQuestions/AskQuestion.css
@@ -20,6 +20,7 @@
     margin: auto;
     padding: 0px 20px 20px 20px;
     max-width: 1200px;
+  
   }
 
 
@@ -89,7 +90,7 @@
     width: calc(100% - 20px);
     resize: none;
     background-color:  hsl(210,3%,15%);
-    color:white;
+    color:rgb(41, 37, 37);
   }
 
  
@@ -186,11 +187,13 @@ outline:none;
   }
 
   .code-block {
-    background-color: #f5f5f5;
+    background-color: #34323246;
     padding: 10px;
     margin: 10px;
     border-radius: 5px;
     overflow-x: auto;
+    color:whitesmoke;
+
   }
 
   #ask-ques-title:focus-within{
