--- a/client/src/pages/AskQuestions/AskQuestion.css
+++ b/client/src/pages/AskQuestions/AskQuestion.css
@@ -1,7 +1,7 @@
 .ask-question {
     min-height: 100vh;
     background-color: #f1f2f3;
-
+color:black;
   }
   
   .ask-question-dark {
@@ -15,6 +15,8 @@
     padding: 0px 20px 20px 20px;
     max-width: 1200px;
   }
+ 
+  
 
   .ask-ques-container-dark {
     margin: auto;
@@ -52,6 +54,7 @@
 @media (max-width:600px){
  .ask-form-container input{
    font-size:8px;
+   color:black;
   }
   .ask-form-container-dark input{
     font-size:8px;
@@ -90,7 +93,7 @@
     width: calc(100% - 20px);
     resize: none;
     background-color:  hsl(210,3%,15%);
-    color:rgb(41, 37, 37);
+    color:white;
   }
 
  
@@ -201,3 +204,11 @@ outline:none;
     color:white;
     border: 2px solid rgb(49, 107, 207);
    }
+
+ .color_pallet-dark{
+filter: invert(100%);
+ }
+
+.editor1{
+  color:white;
+}
